--- a/VirtualWallet.WebApi/appsettings.json
+++ b/VirtualWallet.WebApi/appsettings.json
@@ -35,12 +35,12 @@
     }
   },
   "MailSettings": {
-    "EmailFrom": "info@codewithmukesh.com",
+    "EmailFrom": "virtual.wallet@mail.com",
     "SmtpHost": "smtp.ethereal.email",
     "SmtpPort": 587,
     "SmtpUser": "doyle.sauer@ethereal.email",
     "SmtpPass": "6X4wBQQYgU14F23VYc",
-    "DisplayName": "Victor Ogudu"
+    "DisplayName": "Virtual Wallet"
   },
   "JWTSettings": {
     "Key": "C1CF4B7DC4C4175B6618DE4F55CA4",
